--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@
 
 # Test binary, built with `go test -c`
 *.test
+.vscode/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Binaries
+dist/
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
