--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # Test binary, built with `go test -c`
 *.test
 .vscode/
+_test/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
